apps/whisparr/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisparr
  namespace: default
  labels:
    app: whisparr
spec:
  selector:
    matchLabels:
      app: whisparr
  # replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: whisparr
      labels:
        app: whisparr
    spec:
      containers:
        - name: whisparr
          image: ghcr.io/hotio/whisparr:latest
          ports:
            - containerPort: 6969
              name: whisparr
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: data
          hostPath:
            path: /home/ad/homelab/data
            type: Directory
        - name: config
          hostPath:
            path: /home/ad/homelab/config/whisparr
            type: Directory
      restartPolicy: Always
---
