apps/whisparr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisparr
  namespace: default
spec:
  selector:
    app: whisparr
  ports:
    - name: whisparr
      port: 6969
      targetPort: 6969
