apps/whisparr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisparr
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: whisparr.h18s.lab
      http:
        paths:
          - {
              path: /,
              pathType: Prefix,
              backend: { service: { name: whisparr, port: { number: 6969 } } },
            }
